deployment.yml
apiVersion: v1
items:
  - apiVersion: v1
    kind: Service
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o deployment.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        app: adslproxy
      name: adslproxy
      namespace: adslproxy
    spec:
      ports:
        - name: "8425"
          port: 8425
          targetPort: 8425
      selector:
        app: adslproxy
    status:
      loadBalancer: {}
  - apiVersion: apps/v1
    kind: Deployment
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o deployment.yml
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        app: adslproxy
      name: adslproxy
      namespace: adslproxy
    spec:
      replicas: 1
      strategy: {}
      selector:
        matchLabels:
          app: adslproxy
      template:
        metadata:
          annotations:
            kompose.cmd: kompose convert -f docker-compose.yml -o deployment.yml
            kompose.version: 1.20.0 ()
          creationTimestamp: null
          labels:
            app: adslproxy
        spec:
          containers:
            - args:
                - adslproxy
                - serve
              env:
                - name: REDIS_HOST
                  valueFrom:
                    secretKeyRef:
                      name: redis
                      key: host
                - name: REDIS_PASSWORD
                  valueFrom:
                    secretKeyRef:
                      name: redis
                      key: password
              image: germey/adslproxy
              name: adslproxy
              ports:
                - containerPort: 8425
              resources: {}
          restartPolicy: Always
    status: {}
kind: List
metadata: {}
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-adslproxy
  namespace: adslproxy
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
    - host: adslproxy.cuiqingcai.com
      http:
        paths:
          - backend:
              serviceName: adslproxy
              servicePort: 8425
            path: /
